test/integration/bad/err-jacobian-plusequals-scope.stan
model {
  real x;
  x = 2.0;
  jacobian += x;
}
